[tool.poetry]
name = "whos_hiring"
version = "1"
description = "Hacker News \"Who's Hiring\" review tools"
authors = ["Noah Yetter <nyetter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
dearpygui = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
